服务端代码测试

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 server.port = 8821
 server.servlet.context-path = /
 
-mybatis.mapper-locations = classpath:mapping/*Mapper.xml
-mybatis.type-aliases-package =com.misyi.exercise.core.entity
+#mybatis.mapper-locations = classpath:mapping/*Mapper.xml
+##mybatis.type-aliases-package =com.misyi.exercise.core.entity
+
+sentinel.init.port=18821
+sentinel.init.namespaces=adx-engine
+sentinel.init.nacos.namespace=public
+sentinel.init.nacos-host=localhost
+sentinel.init.group-id=SENTINEL_GROUP
+
+# 本地启动多个示例
+csp.sentinel.log.use.pid=true
+
+
+#project.name=adx-test
+#csp.sentinel.dashboard.server=localhost:8080
+#spring.application.name=adx-engine
+project.name=token-server
+spring.cloud.sentinel.transport.dashboard=localhost:8080
